--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: var(--veryDarkBlue);
 }
 
 svg {
